# libsentry

./: .coveralls.yml  .gitignore  CMakeLists.txt  sentry.pc.in
.circleci/: config.yml
api/: sentry.h
cmake/: FindCURL.cmake  coverage.cmake  findjson.c
coveralls-cmake/cmake/: CoverallsGenerateGcov.cmake
example/: CMakeLists.txt  findSentry.cmake  main.c
include/: sentry.h  url.h
src/: main.c  test_main.c  url.c
src/tools/: lib_cli.c
tests/: client.c  demo_func.c  json.c  more.c
